--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -13,6 +13,8 @@ ui:
   bundle:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/HEAD/raw/build/ui-bundle.zip?job=bundle-stable
     snapshot: true
+  supplemental_files: ./theme-supplemental/
+
 antora: 
   extensions:
     - '@antora/lunr-extension'
